--- a/Android/udpSocket/app/src/main/AndroidManifest.xml
+++ b/Android/udpSocket/app/src/main/AndroidManifest.xml
@@ -6,15 +6,25 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".UdpActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".UdpService"
+            android:exported="false" />
+
+        <receiver
+            android:name=".AlarmReceiver"
+            android:process=":remote" >
+        </receiver>
+
     </application>
 
 </manifest>
