--- a/Android/udpSocket/app/src/main/AndroidManifest.xml
+++ b/Android/udpSocket/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
         </activity>
 
         <activity
+            android:name=".login.CreateActivity"
+            android:label="@string/title_activity_create" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".UdpActivity"
             android:label="@string/app_name" >
             <intent-filter>
