--- a/ClientApp/udpclienttiempos.cfg
+++ b/ClientApp/udpclienttiempos.cfg
@@ -1,10 +1,10 @@
 [UDPClient]
 host=200.10.202.29
 port=9999
-installDirUnix = /etc/TIX
-TEST_host=200.10.202.29
-//TEST_port=80
-TEST_port= 7777
+installDirUnix = ../ClientApp
+TEST_host=LOCALHOST
+TEST_port=10000
+
 TEST2_host=200.10.202.29
 TEST2_port=80
-modo_debug=0
+modo_debug=True
