Create directories and configure sever params to run the app locally.

--- a/ServerApp/tixserver-local.cfg
+++ b/ServerApp/tixserver-local.cfg
@@ -5,7 +5,7 @@ databaseUsername=paw
 databasePassword=paw
 databaseName = internetqos
 databasePort = 5432
-installDirUnix = /etc/TIX
+installDirUnix = ./etc/TIX
 SERVER_HOST = localhost
 SERVER_PORT = 10000
 TEST_SERVER_HOST = localhost
