--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+
+## Program dependant files
+ServerApp/etc/TIX/records/*
