--- a/Android/udpSocket/app/src/main/AndroidManifest.xml
+++ b/Android/udpSocket/app/src/main/AndroidManifest.xml
@@ -18,10 +18,6 @@
         </activity>
 
         <activity
-            android:name=".screens.login.CreateUserActivity"
-            android:label="@string/title_activity_create" />
-
-        <activity
             android:name=".UdpActivity"
             android:label="@string/app_name" >
 
@@ -60,7 +56,7 @@
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="android.nett.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
             </intent-filter>
         </receiver>
 
